MyGrammar/Parser/gen/GrammarRulesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Projects/MyGrammar/MyGrammar\GrammarRules.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class GrammarRulesParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		IF=1, THEN=2, ELSE=3, SEMI=4, IDENTIFIER=5, LPAREN=6, RPAREN=7, AND=8, 
		OR=9, GT=10, GE=11, LT=12, LE=13, EQ=14, MINUS=15, MULT=16, DIV=17, PLUS=18, 
		TRUE=19, FALSE=20, DECIMAL=21;
	public const int
		RULE_rule_set = 0, RULE_single_rule = 1, RULE_condition = 2, RULE_conclusion = 3, 
		RULE_logical_expr = 4, RULE_comparison_expr = 5, RULE_comparison_operand = 6, 
		RULE_comp_operator = 7, RULE_arithmetic_expr = 8, RULE_logical_entity = 9, 
		RULE_numeric_entity = 10;
	public static readonly string[] ruleNames = {
		"rule_set", "single_rule", "condition", "conclusion", "logical_expr", 
		"comparison_expr", "comparison_operand", "comp_operator", "arithmetic_expr", 
		"logical_entity", "numeric_entity"
	};

	private static readonly string[] _LiteralNames = {
	};
	private static readonly string[] _SymbolicNames = {
		null, "IF", "THEN", "ELSE", "SEMI", "IDENTIFIER", "LPAREN", "RPAREN", 
		"AND", "OR", "GT", "GE", "LT", "LE", "EQ", "MINUS", "MULT", "DIV", "PLUS", 
		"TRUE", "FALSE", "DECIMAL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GrammarRules.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GrammarRulesParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GrammarRulesParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GrammarRulesParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class Rule_setContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(GrammarRulesParser.Eof, 0); }
		public Single_ruleContext[] single_rule() {
			return GetRuleContexts<Single_ruleContext>();
		}
		public Single_ruleContext single_rule(int i) {
			return GetRuleContext<Single_ruleContext>(i);
		}
		public Rule_setContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule_set; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterRule_set(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitRule_set(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRule_set(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Rule_setContext rule_set() {
		Rule_setContext _localctx = new Rule_setContext(Context, State);
		EnterRule(_localctx, 0, RULE_rule_set);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 25;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IF) {
				{
				{
				State = 22; single_rule();
				}
				}
				State = 27;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 28; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Single_ruleContext : ParserRuleContext {
		public ITerminalNode IF() { return GetToken(GrammarRulesParser.IF, 0); }
		public ConditionContext condition() {
			return GetRuleContext<ConditionContext>(0);
		}
		public ITerminalNode THEN() { return GetToken(GrammarRulesParser.THEN, 0); }
		public ConclusionContext[] conclusion() {
			return GetRuleContexts<ConclusionContext>();
		}
		public ConclusionContext conclusion(int i) {
			return GetRuleContext<ConclusionContext>(i);
		}
		public ITerminalNode ELSE() { return GetToken(GrammarRulesParser.ELSE, 0); }
		public ITerminalNode SEMI() { return GetToken(GrammarRulesParser.SEMI, 0); }
		public Single_ruleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_single_rule; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterSingle_rule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitSingle_rule(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingle_rule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Single_ruleContext single_rule() {
		Single_ruleContext _localctx = new Single_ruleContext(Context, State);
		EnterRule(_localctx, 2, RULE_single_rule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30; Match(IF);
			State = 31; condition();
			State = 32; Match(THEN);
			State = 33; conclusion();
			State = 34; Match(ELSE);
			State = 35; conclusion();
			State = 36; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConditionContext : ParserRuleContext {
		public Logical_exprContext logical_expr() {
			return GetRuleContext<Logical_exprContext>(0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_condition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterCondition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitCondition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCondition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConditionContext condition() {
		ConditionContext _localctx = new ConditionContext(Context, State);
		EnterRule(_localctx, 4, RULE_condition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38; logical_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConclusionContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(GrammarRulesParser.IDENTIFIER, 0); }
		public ConclusionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conclusion; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterConclusion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitConclusion(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConclusion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConclusionContext conclusion() {
		ConclusionContext _localctx = new ConclusionContext(Context, State);
		EnterRule(_localctx, 6, RULE_conclusion);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Logical_exprContext : ParserRuleContext {
		public Logical_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logical_expr; } }
	 
		public Logical_exprContext() { }
		public virtual void CopyFrom(Logical_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LogicalEntityContext : Logical_exprContext {
		public Logical_entityContext logical_entity() {
			return GetRuleContext<Logical_entityContext>(0);
		}
		public LogicalEntityContext(Logical_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterLogicalEntity(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitLogicalEntity(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalEntity(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ComparisonExpressionContext : Logical_exprContext {
		public Comparison_exprContext comparison_expr() {
			return GetRuleContext<Comparison_exprContext>(0);
		}
		public ComparisonExpressionContext(Logical_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterComparisonExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitComparisonExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparisonExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LogicalExpressionInParenContext : Logical_exprContext {
		public ITerminalNode LPAREN() { return GetToken(GrammarRulesParser.LPAREN, 0); }
		public Logical_exprContext logical_expr() {
			return GetRuleContext<Logical_exprContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(GrammarRulesParser.RPAREN, 0); }
		public LogicalExpressionInParenContext(Logical_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterLogicalExpressionInParen(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitLogicalExpressionInParen(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalExpressionInParen(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LogicalExpressionAndContext : Logical_exprContext {
		public Logical_exprContext[] logical_expr() {
			return GetRuleContexts<Logical_exprContext>();
		}
		public Logical_exprContext logical_expr(int i) {
			return GetRuleContext<Logical_exprContext>(i);
		}
		public ITerminalNode AND() { return GetToken(GrammarRulesParser.AND, 0); }
		public LogicalExpressionAndContext(Logical_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterLogicalExpressionAnd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitLogicalExpressionAnd(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalExpressionAnd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LogicalExpressionOrContext : Logical_exprContext {
		public Logical_exprContext[] logical_expr() {
			return GetRuleContexts<Logical_exprContext>();
		}
		public Logical_exprContext logical_expr(int i) {
			return GetRuleContext<Logical_exprContext>(i);
		}
		public ITerminalNode OR() { return GetToken(GrammarRulesParser.OR, 0); }
		public LogicalExpressionOrContext(Logical_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterLogicalExpressionOr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitLogicalExpressionOr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalExpressionOr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Logical_exprContext logical_expr() {
		return logical_expr(0);
	}

	private Logical_exprContext logical_expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Logical_exprContext _localctx = new Logical_exprContext(Context, _parentState);
		Logical_exprContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_logical_expr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				_localctx = new ComparisonExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 43; comparison_expr();
				}
				break;
			case 2:
				{
				_localctx = new LogicalExpressionInParenContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 44; Match(LPAREN);
				State = 45; logical_expr(0);
				State = 46; Match(RPAREN);
				}
				break;
			case 3:
				{
				_localctx = new LogicalEntityContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 48; logical_entity();
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 59;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 57;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						_localctx = new LogicalExpressionAndContext(new Logical_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_logical_expr);
						State = 51;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 52; Match(AND);
						State = 53; logical_expr(6);
						}
						break;
					case 2:
						{
						_localctx = new LogicalExpressionOrContext(new Logical_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_logical_expr);
						State = 54;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 55; Match(OR);
						State = 56; logical_expr(5);
						}
						break;
					}
					} 
				}
				State = 61;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Comparison_exprContext : ParserRuleContext {
		public Comparison_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comparison_expr; } }
	 
		public Comparison_exprContext() { }
		public virtual void CopyFrom(Comparison_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ComparisonExpressionParensContext : Comparison_exprContext {
		public ITerminalNode LPAREN() { return GetToken(GrammarRulesParser.LPAREN, 0); }
		public Comparison_exprContext comparison_expr() {
			return GetRuleContext<Comparison_exprContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(GrammarRulesParser.RPAREN, 0); }
		public ComparisonExpressionParensContext(Comparison_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterComparisonExpressionParens(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitComparisonExpressionParens(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparisonExpressionParens(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ComparisonExpressionWithOperatorContext : Comparison_exprContext {
		public Comparison_operandContext[] comparison_operand() {
			return GetRuleContexts<Comparison_operandContext>();
		}
		public Comparison_operandContext comparison_operand(int i) {
			return GetRuleContext<Comparison_operandContext>(i);
		}
		public Comp_operatorContext comp_operator() {
			return GetRuleContext<Comp_operatorContext>(0);
		}
		public ComparisonExpressionWithOperatorContext(Comparison_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterComparisonExpressionWithOperator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitComparisonExpressionWithOperator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparisonExpressionWithOperator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Comparison_exprContext comparison_expr() {
		Comparison_exprContext _localctx = new Comparison_exprContext(Context, State);
		EnterRule(_localctx, 10, RULE_comparison_expr);
		try {
			State = 70;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				_localctx = new ComparisonExpressionWithOperatorContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 62; comparison_operand();
				State = 63; comp_operator();
				State = 64; comparison_operand();
				}
				break;
			case 2:
				_localctx = new ComparisonExpressionParensContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 66; Match(LPAREN);
				State = 67; comparison_expr();
				State = 68; Match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Comparison_operandContext : ParserRuleContext {
		public Arithmetic_exprContext arithmetic_expr() {
			return GetRuleContext<Arithmetic_exprContext>(0);
		}
		public Comparison_operandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comparison_operand; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterComparison_operand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitComparison_operand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparison_operand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Comparison_operandContext comparison_operand() {
		Comparison_operandContext _localctx = new Comparison_operandContext(Context, State);
		EnterRule(_localctx, 12, RULE_comparison_operand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; arithmetic_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Comp_operatorContext : ParserRuleContext {
		public ITerminalNode GT() { return GetToken(GrammarRulesParser.GT, 0); }
		public ITerminalNode GE() { return GetToken(GrammarRulesParser.GE, 0); }
		public ITerminalNode LT() { return GetToken(GrammarRulesParser.LT, 0); }
		public ITerminalNode LE() { return GetToken(GrammarRulesParser.LE, 0); }
		public ITerminalNode EQ() { return GetToken(GrammarRulesParser.EQ, 0); }
		public Comp_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comp_operator; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.EnterComp_operator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarRulesListener typedListener = listener as IGrammarRulesListener;
			if (typedListener != null) typedListener.ExitComp_operator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarRulesVisitor<TResult> typedVisitor = visitor as IGrammarRulesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComp_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Comp_operatorContext comp_operator() {
		Comp_operatorContext _localctx = new Comp_operatorContext(Context, State);
		EnterRule(_localctx, 14, RULE_comp_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << GE) | (1L << LT) | (1L << LE) | (1L << EQ))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
